	- please doxygen, put doxygen comment in one place.
	- asynclook -b blocking mode and test.
	- refactor asynclook, nicer code.
	- fixup race problems from opensll in rand init from library, with
	  a mutex around the rand init.
	- fix pass async_id=NULL to _async resolve().
	- rewrote _wait() routine, so that it is threadsafe.
	- cancelation is threadsafe.

24 January 2008: Wouter
	- tested the cancel() function.
	- asynclook -c (cancel) feature.
	- fix fail to allocate context actions.
	- make pipe nonblocking at start.
	- update plane for retry mode with caution to limit bandwidth.
	- fix Makefile for concurrent make of unbound-host.
	- renamed ub_val_ctx_wait/poll/process/fd to ub_val*.
	- new calls to set forwarding added to header and docs.

23 January 2008: Wouter
	- removed debug prints from if-auto, verb-algo enables some.
	- libunbound QUIT setup, remove memory leaks, when using threads
	  will share memory for passing results instead of writing it over
	  the pipe, only writes ID number over the pipe (towards the handler
	  thread that does process() ).

22 January 2008: Wouter
	- library code for async in libunbound/unbound.c.
	- fix link testbound.
	- fixup exit bug in mini_event.
	- background worker query enter and result functions.
	- bg query test application asynclook, it looks up multiple
	  hostaddresses (A records) at the same time.

21 January 2008: Wouter
	- libworker work, netevent raw commpoints, write_msg, serialize.

18 January 2008: Wouter
	- touch up of manpage for libunbound.
	- support for IP_RECVDSTADDR (for *BSD ip4).
	- fix for BSD, do not use ip4to6 mapping, make two sockets, once
	  ip6 and once ip4, uses socket options.
	- goodbye ip4to6 mapping.
	- update ldns-testpkts with latest version from ldns-trunk.
	- updated makedist for relative ldns pathnames.
	- library API with more information inside the result structure.
	- work on background resolves.

17 January 2008: Wouter
	- fixup configure in case -lldns is installed.